<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeActivity">
<!--
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
    </android.support.design.widget.AppBarLayout>
-->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="25dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/imagedesctitle_ramadan"
                    android:padding="7dp"
                    android:src="@drawable/titleramadan" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Toilet-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imgdesctoilet"
                    android:padding="7dp"
                    android:src="@drawable/toilet" />
                <!-- Petrol Pump-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imgdescpetrolpump"
                    android:padding="7dp"
                    android:src="@drawable/petrolstation" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- Pharmacy-->
                <!--   <android.support.v7.widget.CardView
                    android:contentDescription="@string/imgdescpharmacy"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="7dp">
                </android.support.v7.widget.CardView>
                -->
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imgdescpharmacy"
                    android:padding="7dp"
                    android:src="@drawable/pharmacy" />
                <!-- Blood Bank-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imgdescblood_bank"
                    android:padding="7dp"
                    android:src="@drawable/bloodbank" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Post Office-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedescpostoffice"
                    android:padding="7dp"
                    android:src="@drawable/postoffice" />


                <!-- Courier Service-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedesccourierservice"
                    android:padding="7dp"
                    android:src="@drawable/courierservice" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Govt Office-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedescgovtoffice"
                    android:padding="7dp"
                    android:src="@drawable/govtoffice" />


                <!-- Transport-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedesctransport"
                    android:padding="7dp"
                    android:src="@drawable/transport" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Emergency Call-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedescemergencycall"
                    android:padding="7dp"
                    android:src="@drawable/emergencycall" />


                <!-- Entertainment-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedescentertainment"
                    android:padding="7dp"
                    android:src="@drawable/entertainment" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Festival -->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedescfestival"
                    android:padding="7dp"
                    android:src="@drawable/utsab" />


                <!-- Education-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedesceducation"
                    android:padding="7dp"
                    android:src="@drawable/education" />


            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <!--
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ScrollView>


    -->



</android.support.design.widget.CoordinatorLayout>